OpenWRT toolchain was added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,11 @@ set(BUILD_TEST $ENV{BUILD_TESTS})
 set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Choose the type of build, options are: Debug Release")
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
+  message(AUTHOR_WARNING "OS_LINUX")
   add_definitions(-DOS_LINUX)
   add_definitions(-DOS_POSIX)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "QNX")
+  message(AUTHOR_WARNING "OS_QNX")
   add_definitions(-DOS_QNX)
   add_definitions(-DOS_POSIX)
   set(RTLIB)
